# Anilist-Manga-Updater

./: .cursorignore  .gitignore  .prettierignore  404.html  AccessAPI.py  Config.py  GUI.py  GetAccessToken.py  GetFromFile.py  GetFromSite.py  GetID.py  LICENSE  Main.py  Program.py  README.md  UpdateAnilist.py  WriteToFile.py  eslint.config.mjs  forge.config.js  forge.config.ts  getFromFile.py  getFromSite.py  index.html  install_packages.sh  linux_install_and_run.sh  linux_install_packages.sh  linux_run_program.sh  main.py  mkdocs.yml  msedgeconfig.json  objects.inv  package-lock.json  package.json  playwright.config.ts  pyproject.toml  qodana.yaml  requirements.txt  scripts.py  setup.cfg  sitemap.xml  (+3 more)
.ai/: arch.md  prd.md  story-1.story.md  story-2.story.md  story-3.story.md  story-4.story.md  story-5.story.md
.github/: dependabot.yaml  dependabot.yml
.github/workflows/: auto-merge.yml  build.yml  check-updates.yml  code-quality.yml  code_quality.yml  codeql.yml  delete-old-artifacts.yml  dependabot.yml  docs.yml  lint.yml  pylint.yml  ruff.yml  super-linter.yml  test.yml
API/APIRequests/: index.html
API/AccessAPI/: index.html
API/GetAccessToken/: index.html
API/Queries/: index.html
API/UpdateManga/: index.html
AnilistMangaUpdater/API/: APIRequests.py  AccessAPI.py  GetAccessToken.py  UpdateManga.py  queries.py
AnilistMangaUpdater/Main/: GUI.py  Program.py
AnilistMangaUpdater/Manga/: GetID.py  manga_search.py
AnilistMangaUpdater/Utils/: Config.py  GetFromFile.py  WriteToFile.py  cache.py  dictionaries.py  log.py
Main/GUI/: index.html
Main/Program/: index.html
Manga/GetID/: index.html
Manga/MangaSearch/: index.html
Manga_Data/: format_cache.json  title_cache.json
Program/: main.py
Program/API/: APIRequests.py  AccessAPI.py  GetAccessToken.py  UpdateManga.py
Program/Main/: GUI.py  Program.py
Program/Manga/: GetID.py  manga_search.py
Program/Utils/: Config.py  GetFromFile.py  WriteToFile.py  cache.py  dictionaries.py  log.py  titles.py
Resources/: alternative_titles.json  format_cache.json  title_cache.json
Utils/Cache/: index.html
Utils/Config/: index.html
Utils/Dictionaries/: index.html
Utils/GetFromFile/: index.html
Utils/Log/: index.html
Utils/WriteToFile/: index.html
docs/: index.md
docs/API/: APIRequests.md  AccessAPI.md  GetAccessToken.md  Queries.md  UpdateManga.md
docs/Main/: GUI.md  Program.md
docs/Manga/: GetID.md  MangaSearch.md
docs/Utils/: Cache.md  Config.md  Dictionaries.md  GetFromFile.md  Log.md  WriteToFile.md
old-python/: main.py
old-python/Icons/: Anilist-Manga-Updater-Logo2.icns
old-python/docs/: index.md
search/: search_index.json
src/: App.tsx  main.ts  types.d.ts
(+216 files in other folders)
