[tool.poetry]
name = "Anilist-Manga-Updater"
version = "1.72"
description = "Syncs your Kenmei exported manga list with AniList"
authors = ["RLAlpha49 <75044176+RLAlpha49@users.noreply.github.com>"]
readme = "README.md"
license = "GNU General Public License v3.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "^11.1.0"
customtkinter = "^5.2.2"
CTkToolTip = "^0.8"
requests = "^2.32.3"
pymoe = "^2.2"
pandas = "^2.2.3"

[tool.poetry.dev-dependencies]
types-requests = "^2.32.0.20250328"
mypy = "^1.15.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.11"
mkdocstrings = {extras = ["crystal", "python"], version = "^0.29.1"}
mkdocs-git-revision-date-localized-plugin = "^1.4.5"
mkdocs-git-committers-plugin-2 = "^2.5.0"
ruff = "^0.11.2"

[tool.mypy]
ignore_missing_imports = true
disable_error_code = "attr-defined"